@@ -4,6 +4,8 @@ VERSION 0.6.4cvs
 
 2005-03-15  Vincent Richard  <vincent@vincent-richard.net>
 
+ * tests/parser/textTest.cpp: added more unit tests for 'text' class.
+
  * text.{cpp|hpp}, word.{cpp|hpp}: moved word parsing from 'text' class
    to 'word' class, which now inherits from 'component'.
 
